# portfolio

./: .gitignore  README.md  pyproject.toml
cka/docs/01-Introduction/: 01-Course-Introduction.html  02-Certification.html
cka/docs/02-Core-Concepts/: 01-Core-Concepts-Section-Introduction.html  02-Cluster-Architecture.html  03-Docker-vs-ContainerD.html  04-ETCD-For-Beginners.html  05-ETCD-in-Kubernetes.html  06-Kube-API-Server.html  07-Kube-Controller-Manager.html  08-Kube-Scheduler.html  09-Kubelet.html  10-Kube-Proxy.html  11-Pods.html  12-Practice-Test-Introduction.html  13-Practice-Test-PODs.html  14-ReplicaSets.html  15-Practice-Tests-ReplicaSet.html  16-Deployments.html  17-Practice-Tests-Deployments.html  18-Namespaces.html  19-Practice-Test-Namespaces.html  20-Services.html  21-Services-ClusterIP.html  22-Practice-Test-Services.html  23-Imperative-Commands-with-kubectl.html  24-Practice-Test-Imperative-Commands.html  25-Attachments.html
cka/docs/03-Scheduling/: 01-Scheduling-Section-Introduction.html  02-Manual-Scheduling.html  03-Practice-Test-Manual-Scheduling.html  04-Labels-and-Selectors.html  05-Practice-Test-Labels-and-Selectors.html  06-Taints-and-Tolerations.html  07-Practice-Test-Taints-and-Tolerations.html  08-Node-Selectors.html  09-Node-Affinity.html  10-Practice-Test-Node-Affinity.html  11.Taints-and-Tolerations-vs-Node-Affinity.html  12-Resource-Limits.html  13-Practice-Test-Resource-Limits.html  (+8 more)
docs/: EventProcessingServiceArchitecure.md  OLAP_OLEP_OLTP.md  OLAP_OLEP_OLTP_And_DataMeshes.md  resume.md
docs/resume/: resume.html  resume.md
(+136 files in other folders)
